--- a/risoto.html
+++ b/risoto.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="../Assets/CSS/global.css" />
+    <link rel="stylesheet" href="CSS/global.css" />
     <link rel="stylesheet" href="CSS/risoto.css" />
 
 </head>
